styles/styles.css
/* ... */
.modal-search__field {
  font-weight: 700;
}

.modal-search__label--arrival .modal-search__field,
.modal-search__label--departure .modal-search__field {
  flex-grow: 1;
  padding: 13px 56px 11px 20px;
  background-image: url("../images/icons-date.svg");
  background-position: right 20px center;
  background-size: 20px 20px;
  background-repeat: no-repeat;
  border-radius: 4px;
}

.modal-search__notice {
  min-height: 16px;
  margin-bottom: calc(23px - var(--gap-search-form));
  margin-left: 137px;
  padding: 4px 20px 0;
  font-size: 16px;
}

.modal-search__notice--error {
  color: var(--color-font-error);
}

.modal-search__wrapper {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
}

.modal-search__wrapper--children {
  justify-self: end;
}

.modal-search__input-with-buttons {
  display: flex;
  overflow: hidden;
  border-radius: 4px;
}

.modal-search__wrapper .modal-search__field {
  width: 31px;
  padding: 13px 0 11px;
  line-height: 20px;
  text-align: center;
  appearance: textfield;
}

.modal-search__wrapper .modal-search__field::-webkit-outer-spin-button,
.modal-search__wrapper .modal-search__field::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
}

.modal-search__button-edit {
  display: flex;
  align-self: center;
  width: 40px;
  height: 48px;
  padding: 0;
  background-color: var(--color-btn-form);
  border: none;
  cursor: pointer;
}

.modal-search__button-edit::after {
  content: "";
  width: 20px;
  height: 20px;
  margin: auto;
  background-color: var(--color-icon-basic-active);
}

.modal-search__button-decrease::after {
  -webkit-mask: url("../images/icons-minus.svg") center / contain no-repeat;
  mask: url("../images/icons-minus.svg") center / contain no-repeat;
}

.modal-search__button-increase::after {
  -webkit-mask: url("../images/icons-plus.svg") center / contain no-repeat;
  mask: url("../images/icons-plus.svg") center / contain no-repeat;
}

.modal-search__wrapper .modal-search__field:focus,
.modal-search__button-edit:focus {
  outline-offset: -3px;
}

.modal-search__button-edit:not(:disabled):hover::after,
.modal-search__button-edit:not(:disabled):focus-visible::after {
  background-color: var(--color-icon-basic);
}

.modal-search__button-edit:not(:disabled):active::after {
  background-color: var(--color-icon-basic-bgnd-active);
}

.modal-search__button-edit:disabled {
  opacity: 0.3;
  cursor: initial;
}

/* Tooltip */
.modal-search__label-with-tooltip {
  display: flex;
  align-items: center;
  min-width: 111px;
  margin-right: 20px;
}

.modal-search__label-with-tooltip .modal-search__label {
  width: fit-content;
  max-width: 104px;
  margin-right: 6px;
}

.modal-search__tooltip {
  position: relative;
}

.modal-search__tooltip-toggle {
  display: flex;
  width: 26px;
  height: 26px;
  padding: 0;
  background-color: var(--color-btn-util-2);
  border: none;
  border-radius: 50px;
  cursor: pointer;
}

.modal-search__tooltip-toggle::after {
  content: "";
  width: 16px;
  height: 16px;
  margin: auto;
  background-color: var(--color-font-bgnd);
  -webkit-mask: url("../images/icons-info.svg") center / contain no-repeat;
  mask: url("../images/icons-info.svg") center / contain no-repeat;
}

.modal-search__tooltip-toggle:active {
  background-color: var(--color-btn-util-hover);
}

.modal-search__tooltip-toggle:active::after {
  background-color: var(--color-font-bgnd-active);
}

.modal-search__tooltip-toggle:disabled {
  background-color: var(--color-btn-disabled);
  cursor: initial;
}

.modal-search__tooltip-toggle:disabled::after {
  background-color: var(--color-font-bgnd);
}

.modal-search__tooltip-text {
  position: absolute;
  top: 100%;
  left: 50%;
  display: none;
  width: 256px;
  margin-top: 15px;
  padding: 20px 18px 23px 22px;
  font-size: 16px;
  line-height: 20px;
  color: var(--color-font-bgnd);
  background-color: var(--color-bgnd-tooltip);
  border-radius: 10px;
  box-shadow: 0 15px 30px 0 var(--color-shadow-tooltip);
  transform: translateX(-50%);
}

.modal-search__tooltip-text::after {
  content: "";
  position: absolute;
  right: 0;
  bottom: 100%;
  left: 0;
  width: 20px;
  height: 9px;
  margin-right: auto;
  margin-left: auto;
  background-image: url("../images/icons-tooltip-arrow.svg");
}

.modal-search__tooltip-toggle:not(:disabled):hover + .modal-search__tooltip-text,
.modal-search__tooltip-toggle:not(:disabled):focus-visible + .modal-search__tooltip-text {
  display: block;
}
/* Tooltip ending*/

.modal-search__button-search {
  padding: 18px 80px;
  font-size: 20px;
  line-height: 24px;
  border-radius: 10px;
}

/* Main catalog */
.main-catalog__wrapper {
  padding: 35px 70px 70px;
  color: var(--color-font-bgnd);
  background-color: var(--color-bgnd-image);
  background-image: url("../images/background-filter.jpg");
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
}

.main__title {
  margin: 0;
  font-size: 60px;
  line-height: 78px;
  font-weight: 700;
}

.main__breadcrumbs {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  margin: 0 0 8px -5px;
  padding: 0;
  list-style: none;
}

.main__breadcrumbs-item {
  display: flex;
  align-items: center;
}

.main__breadcrumbs-item:not(:last-child)::after {
  content: "";
  flex-shrink: 0;
  width: 8px;
  height: 11px;
  margin: 0 5px;
  background-image: url("../images/icons-arrow-right.svg");
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
}

.main__breadcrumbs-link {
  padding: 8px 5px;
  font-size: 16px;
  text-decoration: none;
  color: var(--color-font-bgnd);
}

.main__breadcrumbs-link--index {
  padding: 11px 5px;
}

.main__breadcrumbs-link--index::before {
  content: "";
  display: block;
  width: 13px;
  height: 15px;
  background-color: var(--color-font-bgnd);
  -webkit-mask: url("../images/icons-home.svg") center / contain no-repeat;
  mask: url("../images/icons-home.svg") center / contain no-repeat;
}
/* ... */

